# ComfyUI_Ultrasonic

./: 20250211.json  20250216.json  README.md  __init__.py  node_utils.py  pyproject.toml  requirements.txt  sonic.py  sonic_node.py
examples/: example_with_uncrop.json
src/dataset/: test_preprocess.py
src/dataset/face_align/: align.py
src/models/base/: attention_processor.py  unet_spatio_temporal_condition.py
src/pipelines/: pipeline_sonic.py
src/utils/RIFE/: warplayer.py
svd_repo/: model_index.json
svd_repo/vae/: config.json
